Fix alignment of icons to title

--- a/src/styles/Skill.module.scss
+++ b/src/styles/Skill.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0.3em;
+  margin: 0.3rem;
   font-size: 1.2em;
 
   &[data-size="large"] {
